[package]
name = "esp32c3-idf-led-example"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = "s"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = "0.20.8"
esp-idf-svc = { version = "0.23.1", features = ["binstart"] }

[build-dependencies]
embuild = "0.24.5"
anyhow = "1"
